# FerrumServe

./: Cargo.toml  LISCENSE.md  README.md  db.sqlite3  user_database.sqlite3
.github/workflows/: rust.yml
database.db/: IDENTITY  LOG  LOG.old.1678622410270448  LOG.old.1679071641384713  LOG.old.1679071682420809
src/: client.rs  commands.rs  database.rs  main.rs  message.rs  websocket.rs
src/client/: main.rs
src/server/: commands.rs  database.rs  main.rs  websocket.rs
src/shell/: main.rs
