[package]
name = "rum"
version = "0.1.5-alpha"
edition = "2021"

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }
futures = { version = "0.3.26", features = ["thread-pool"]}
tokio-util = { version = "0.7.7", features = ["full"] }
tokio-stream = { version = "0.1.12" }
colored = "2.0.0"
bytes = "1.4.0"
surrealdb = "1.0.0-beta.8"
serde = "1.0.156"
bincode = "1.3.3"

[[bin]]
name = "rum-client"
path = "src/client/main.rs"
edition = "2021"

[[bin]]
name = "rum-server"
path = "src/server/main.rs"

[[bin]]
name = "rum-auth"
path = "src/server/login_db.rs"

