[package]
name = "rum"
version = "0.9.1-beta"
edition = "2021"

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }
futures = { version = "0.3.26", features = ["thread-pool"]}
tokio-util = { version = "0.7.7", features = ["full"] }
tokio-stream = { version = "0.1.12" }
colored = "2.0.0"
bytes = "1.4.0"
bincode = "1.3.3"
rusqlite = "0.29.0"
prettytable-rs = "0.10.0"
bcrypt = "0.14.0"
tungstenite = "0.18.0"
tokio-tungstenite = "0.18.0"

[[bin]]
name = "rum-client"
path = "src/client/main.rs"

[[bin]]
name = "rum-server"
path = "src/server/main.rs"